Prevent wrapping on neg sign for mobile

--- a/src/components/ui/Typography/moneySpan.scss
+++ b/src/components/ui/Typography/moneySpan.scss
@@ -1,4 +1,6 @@
 .Layer__MoneySpan {
+  white-space: nowrap;
+
   &[data-positive]::before {
     content: '$';
   }
